create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1795,6 +1795,17 @@ body {
 .cid-rmkcLP7yzv .mbr-section-btn {
   text-align: center;
 }
+.cid-rnmpsBhBMr H1 {
+  text-align: center;
+}
+.cid-rnmpsBhBMr .mbr-text,
+.cid-rnmpsBhBMr .mbr-section-btn I {
+  color: #efefef;
+}
+.cid-rnmpsBhBMr .mbr-text,
+.cid-rnmpsBhBMr .mbr-section-btn {
+  text-align: center;
+}
 #instagram-feed-block-e .inst__title {
   color: #efefef;
 }
