--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1795,6 +1795,79 @@ body {
 .cid-rmkcLP7yzv .mbr-section-btn {
   text-align: center;
 }
+.cid-rue3DQCxse {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-rue3DQCxse .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rue3DQCxse H2 {
+  color: #f1f1f1;
+}
+.cid-rueaJPwNp8 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-rueaJPwNp8 .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rueaJPwNp8 .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rueaJPwNp8 .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rueaJPwNp8 .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rueaJPwNp8 .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #363636;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #363636, #45505b) !important;
+}
+.cid-rueaJPwNp8 .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rueaJPwNp8 .mbr-gallery-item > div:hover:before {
+  opacity: 0.5 !important;
+}
+.cid-rueaJPwNp8 .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rueaJPwNp8 .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #363636 !important;
+  opacity: 0.5;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #363636, #45505b) !important;
+}
 #instagram-feed-block-e .inst__title {
   color: #efefef;
 }
