--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1832,17 +1832,17 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #363636;
+  background: #767676;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #363636, #45505b) !important;
+  background: linear-gradient(to left, #767676, #232323) !important;
 }
 .cid-rueaJPwNp8 .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
 }
 .cid-rueaJPwNp8 .mbr-gallery-item > div:hover:before {
-  opacity: 0.5 !important;
+  opacity: 0.7 !important;
 }
 .cid-rueaJPwNp8 .mbr-gallery-title {
   font-size: .9em;
@@ -1862,11 +1862,15 @@ body {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #363636 !important;
-  opacity: 0.5;
+  background: #767676 !important;
+  opacity: 0.7;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #363636, #45505b) !important;
+  background: linear-gradient(to left, #767676, #232323) !important;
+}
+.cid-rueaJPwNp8 .mbr-gallery-item > div > span {
+  text-align: left;
+  color: #efefef;
 }
 #instagram-feed-block-e .inst__title {
   color: #efefef;
